# groonga-tokenizer-mecab-ko

./: .clang-format  .editorconfig  .pre-commit-config.yaml  CMakeLists.txt  README.md
.github/: dependabot.yml
.github/workflows/: lint.yaml  test.yaml
test/: run.sh
test/suite/: one_token.expected  one_token.reject  one_token.test
tokenizers/: CMakeLists.txt  mecab_ko.c
